--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <h1 class="title">Library</h1>
+        <div class="cred">created by <a href="https://github.com/kon65138">kon65138</a></div>
+    </div>
     <div class="sidebar"></div>
     <div class="mainContent"></div>
 </body>
