add js book constructr

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1 class="title">Library</h1>
         <div class="cred">created by <a href="https://github.com/kon65138">kon65138</a></div>
     </div>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+        <form id="newBook" action="/" method="/"></form>
+    </div>
     <div class="mainContent"></div>
 </body>
 </html>
