--- a/index.html
+++ b/index.html
@@ -12,8 +12,34 @@
         <div class="cred">created by <a href="https://github.com/kon65138">kon65138</a></div>
     </div>
     <div class="sidebar">
-        <form id="newBook" action="/" method="/"></form>
+        <form id="newBook" action="/" method="/">
+            <div class="inptWrapr">
+                <label for="name">What is the name of the book?</label>
+                <input type="text" id="bName" name="name">
+                <span></span>
+            </div>
+            <div class="inptWrapr">
+                <label for="author">Who is the author of the book?</label>
+                <input type="text" id="bAuthor" name="author">
+                <span></span>
+            </div>
+            <div class="inptWrapr">
+                <label for="pages">How many pages does the book have?</label>
+                <input type="text" id="bPages" name="pages" pattern="^[0-9]+$">
+                <span></span>
+            </div>
+            <div class="inptWrapr">
+                <label for="read">Have the read the book?</label>
+                <select name="read" id="bRead">
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select>
+                <span></span>
+            </div>
+            <button id="newB" type="none">Add new book</button>
+        </form>
     </div>
-    <div class="mainContent"></div>
+    <div class="mainContent">
+    </div>
 </body>
 </html>
