add main card section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         </form>
     </div>
     <div class="mainContent">
+        <div class="card">
+            <h3 class="name">Harry Potter and the Golbet of Fire</h3>
+            <div class="author">author: J.K Rowling</div>
+            <div class="pages">pages: 636</div>
+            <div class="read">read: no</div>
+        </div>
+        <div class="card">
+            <h3 class="name">The Long Earth</h3>
+            <div class="author">Terry Pratchett and Stephen Baxter</div>
+            <div class="pages">pages: 400</div>
+            <div class="read">read: yes</div>
+        </div>
     </div>
 </body>
 </html>
