make dropdown input required

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="inptWrapr">
                     <label for="read">Have the read the book?</label>
-                    <select name="read" id="bRead">
+                    <select name="read" id="bRead" required>
                         <option value="true">Yes</option>
                         <option value="false">No</option>
                     </select>
