--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="inptWrapr">
                     <label for="read">Have the read the book?</label>
                     <select name="read" id="bRead" required>
-                        <option value="true">Yes</option>
-                        <option value="false">No</option>
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
                     </select>
                     <span></span>
                 </div>
